log
Wed 10 May 2023 09:43:37 PM UTC: 
 tests:  0|4
total_score: 0/70
92dc10a
Wed 10 May 2023 11:24:35 PM UTC: 
 heap.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:33: error: expected expression before ‘Heap’
   38 |   Heap *arreglo = (Heap*)malloc(Heap);
      |                                 ^~~~
heap.c:40:22: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   40 |   arreglo->heapArray = (int*)malloc(3 * sizeof(int));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
b5ce7ab
Wed 10 May 2023 11:24:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:33: error: expected expression before ‘Heap’
   38 |   Heap *arreglo = (Heap*)malloc(Heap);
      |                                 ^~~~
heap.c:40:24: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   40 |   arreglo->heapArray = (int)malloc(3 * sizeof(int));
      |                        ^
heap.c:40:22: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   40 |   arreglo->heapArray = (int)malloc(3 * sizeof(int));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
35c68d8
Wed 10 May 2023 11:25:29 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:33: error: expected expression before ‘Heap’
   38 |   Heap *arreglo = (Heap*)malloc(Heap);
      |                                 ^~~~
Compilation failed
d4a481b
Wed 10 May 2023 11:26:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
2b531ad
